# eat-it

./: pyproject.toml
eat_it/: app.py  controllers.py  repositories.py  views.py
tests/integration/: test_app.py
tests/integrations/: test_app.py
tests/unit/: test_controllers.py  test_ping.py  test_repositories.py  test_users.py  test_views.py
