[tool.poetry]
name = "eat-it"
version = "0.1.0"
description = ""
authors = ["MateuszGontarek <mateuszgontarek2020@gmail.com>"]
readme = "README.md"
packages = [{include = "eat_it"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.2"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
